--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -17,24 +17,6 @@ ul {
     padding: 0px;
 }*/
 
-
-/*------------------------------------ Estilizando imagens do perfil----------------------------------------*/
-/*
-.postPhoto {
-    display: inline-block;
-    border-radius: 50%;
-    overflow: hidden;
-    width: 150px;
-    height: 150px;
-}
-
-.postPhoto img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}*/
-
-/*-------------------------------Definindo e organizando o layout da página-------------------------------------*/
 body {
     width: 100%;
     min-height: 100vh;
@@ -44,14 +26,7 @@ body {
     color: #837E9F;
     display: flex;
     justify-content: center;
-    align-items: center;
-    /*
-    min-height: 225vh;
-    grid-template-areas:
-        "aside main"
-        "footer footer";
-    grid-template-rows: 1fr 70px;
-    grid-template-columns: 290px 1fr; */
+    align-items: center;  
 }
 
 .portfolio-wrapper {
@@ -156,16 +131,14 @@ body {
     gap: 0.5rem;
 }
 
-.portfolio-experiences,
-.portfolio-academic {
+.portfolio-infos {
     display: flex;
     flex-direction: column;
     padding-left: 2rem;
     gap: 0.3rem;
 }
 
-.portfolio-experiences p,
-.portfolio-academic p {
+.portfolio-infos p {
     font-size: 12px;
 }
 
@@ -176,54 +149,48 @@ body {
     align-items: stretch;
     width: 70%;
     min-width: 520px;
-    border: 1px solid red;
+    gap: 1.3rem;   
 }
 
 
 .menu-project {
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 }
 
 .project-section {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
+    gap: 1.3rem;
 }
 
 .portfolio-project {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     gap: 1.3rem;
-    padding-top: 1.3rem;
-
 }
 
-.project1,
-.project2 {
+.project {
     align-items: flex-start;
 }
 
-.project1>main>p,
-.project1>footer>p,
-.project1>footer>a {
+.project>main>p,
+.project>footer>p,
+.project>footer>a {
     font-size: 14px;
 }
 
-.project2>main>p,
-.project2>footer>p,
-.project2>footer>a {
-    font-size: 14px;
-}
-
-.title-project1, .title-project2 {
+.title-project {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 0.5rem;
 }
 
-.itens-project1, .itens-project2 {
+.itens-project {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -231,7 +198,48 @@ body {
     border: 1px solid red;
 }
 
+.post {
+    flex-direction: row;
+    align-items: flex-start;
+    gap: 0.3rem;
+}
 
+.icon-post {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center; 
+    width: 30%;
+    padding: 1.3rem;    
+}
+
+.photo-post {
+    display: flex;
+    justify-content: center;
+    align-items: center;       
+    border-radius: 50%;    
+    overflow: hidden;
+}
+
+.photo-post img {
+    height: 8rem;
+}
+
+.tags-post {
+    display: flex;    
+    justify-content: space-between;
+    align-items: center;
+    font-size: 12px;
+    margin-top: 0.8rem;
+}
+
+.author {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    height: 100%;
+    min-height: 700px;    
+}
 
 
 /*
