--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -138,6 +138,7 @@ body {
     flex-direction: column;
     padding-left: 2rem;
     gap: 0.3rem;
+    font-size: 12px;    
 }
 
 .portfolio-infos p {
@@ -173,6 +174,10 @@ body {
     justify-content: space-between;
     align-items: center;
     gap: 1.3rem;
+}
+
+.conteudo-post {
+    font-size: 12px;
 }
 
 .project {
